--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>VBB coverage visualization</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="main.css" />
 		<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
 
 		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.2/leaflet.css" />
@@ -14,14 +14,11 @@
 		<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
 		<script src="../src/QuadTree.js"></script>
 		<script src="../src/L.TileLayer.MaskCanvas.js"></script>
-		<script src="js/main.js" async defer></script>
+		<script src="main.js" async defer></script>
 	</head>
 	<body>
-		<div class="wrapper">
-			<section class="content">
-				<div id="map"></div>
-			</section>
-		</div>
-		<a href="https://github.com/domoritz/vbb-coverage"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+		<div id="map"></div>
+
+		<a href="https://github.com/domoritz/leaflet-maskcanvas"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 	</body>
 </html>
