--- a/demo/index.html
+++ b/demo/index.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html lang="en-UK">
-<html>
+<!DOCTYPE html>
+<html lang="en-UK">
 	<head>
 		<meta charset="utf-8">
-		<title>VBB coverage visualization</title>
+		<title>VBB coverage visualization with leaflet 0.8</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="main.css" />
 		<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
 
-		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-		<!--[if lte IE 8]>
-		    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.ie.css" />
-		<![endif]-->
-		<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+		<link rel="stylesheet" href="../lib/leaflet-0.8/leaflet.css" />
+		<script src="../lib/leaflet-0.8/leaflet-src.js"></script>
+
 		<script src="../src/QuadTree.js"></script>
 		<script src="../src/L.TileLayer.MaskCanvas.js"></script>
 		<script src="main.js" async defer></script>
@@ -19,6 +17,6 @@
 	<body>
 		<div id="map"></div>
 
-		<a href="https://github.com/domoritz/leaflet-maskcanvas"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+		<a href="https://github.com/shaula/leaflet-maskcanvas"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 	</body>
 </html>
