--- a/demo/index.html
+++ b/demo/index.html
@@ -7,11 +7,8 @@
 		<link rel="stylesheet" href="main.css" />
 		<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
 
-		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-		<!--[if lte IE 8]>
-		    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.ie.css" />
-		<![endif]-->
-		<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
 		<script src="../src/QuadTree.js"></script>
 		<script src="../src/L.TileLayer.MaskCanvas.js"></script>
 		<script src="main.js" async defer></script>
