--- a/demo/index-1.0-dev.html
+++ b/demo/index-1.0-dev.html
@@ -5,7 +5,7 @@
 		<title>Some of Vienna's exciting places with leaflet 1.0-dev</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="main.css" />
-		<script src="../lib/jquery-1.8.0.min.js"></script>
+		<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
 
 		<link rel="stylesheet" href="../lib/leaflet-1.0-dev/leaflet.css" />
 		<script src="../lib/leaflet-1.0-dev/leaflet-src.js"></script>
