--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
 		<title>VBB coverage visualization</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="main.css" />
-		<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.8.0.min.js"></script>
 
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
 		<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
