--- a/demo/index-dist.html
+++ b/demo/index-dist.html
@@ -2,17 +2,16 @@
 <html lang="en-UK">
 	<head>
 		<meta charset="utf-8">
-		<title>Some of Vienna's exciting places with leaflet 1.0-dev</title>
+		<title>Some of Vienna's exciting places with leaflet 1.x</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="main.css" />
 		<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
 
-		<link rel="stylesheet" href="../lib/leaflet-1.0-dev/leaflet.css" />
-		<script src="../lib/leaflet-1.0-dev/leaflet-src.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js"></script>
 
-		<script src="../src/QuadTree.js"></script>
-		<script src="../src/L.GridLayer.MaskCanvas.js"></script>
-		<script src="main-1.0-dev.js"></script>
+		<script src="../dist/L.GridLayer.MaskCanvas.js"></script>
+		<script src="main.js"></script>
 	</head>
 	<body>
 		<div id="map"></div>
