--- a/demo/index.html
+++ b/demo/index.html
@@ -1,17 +1,18 @@
-<!DOCTYPE html lang="en-UK">
-<html>
+<!DOCTYPE html>
+<html lang="en-UK">
 	<head>
 		<meta charset="utf-8">
-		<title>VBB coverage visualization</title>
+		<title>Some of Vienna's exciting places with leaflet 1.x</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="main.css" />
-		<script src="https://code.jquery.com/jquery-1.8.0.min.js"></script>
+		<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
 
-		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
-		<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js"></script>
+
 		<script src="../src/QuadTree.js"></script>
-		<script src="../src/L.TileLayer.MaskCanvas.js"></script>
-		<script src="main.js" async defer></script>
+		<script src="../src/L.GridLayer.MaskCanvas.js"></script>
+		<script src="main.js"></script>
 	</head>
 	<body>
 		<div id="map"></div>
